--- a/Bootstrap-template-Gp/index-home.html
+++ b/Bootstrap-template-Gp/index-home.html
@@ -12,22 +12,22 @@
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon-globe2.png" rel="icon">
+  <link href="./assets/img/favicon-globe2.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="./assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="./assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="./assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="./assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Gp
@@ -46,14 +46,14 @@
 
        <!-- <h1 class="logo me-auto me-lg-0"><a href="index.html">Gp1<span>.</span></a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="https://codefirstgirls.com/" class="logo me-auto me-lg-0"><img src="assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">CFG8</a></h1>
+      <a href="https://codefirstgirls.com/" class="logo me-auto me-lg-0"><img src="./assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
+      <h1 class="logo me-auto me-lg-0"><a href="./index.html">CFG8</a></h1>
       
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">What We Do</a></li>
+          <li><a class="nav-link scrollto active" href="./index-home.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="./index-what-we-do.html">What We Do</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li class="dropdown"><a href="#"><span>The Team</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -72,7 +72,7 @@
               <li><a href="#">Rachel Green</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact us</a></li>
+          <li><a class="nav-link scrollto" href="./index-contact.html">Contact us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -97,32 +97,20 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-house"></i>
-            <h3><a href="">Home</a></h3>
+            <h3><a href="./index-home.html">Home</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-file-person"></i>
             <!-- <i class="bi bi-fingerprint"></i> -->
-            <h3><a href="">About</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="bi bi-boxes"></i>
-            <h3><a href="">Services</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Portfolio</a></h3>
+            <h3><a href="./index-what-we-do.html">What we do</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-person"></i>
-            <h3><a href="">The Team</a></h3>
+            <h3><a href="./index-team.html">The Team</a></h3>
           </div>
         </div>
       </div>
