--- a/Bootstrap-template-Gp/index-what-we-do.html
+++ b/Bootstrap-template-Gp/index-what-we-do.html
@@ -73,6 +73,8 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+      </div>
+  </header><!-- End Header -->
 
       <!-- <a href="#about" class="get-started-btn scrollto">Get Started</a> -->
 
