--- a/Bootstrap-template-Gp/index-contact.html
+++ b/Bootstrap-template-Gp/index-contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gp Bootstrap Template - Index</title>
+  <title>CFG8</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,12 +43,7 @@
     <div class="container d-flex align-items-center justify-content-lg-between">
 
       <!-- Uncomment below if you prefer to use an image logo -->
-<<<<<<< Updated upstream
       <h1 class="logo me-auto me-lg-0"><a href="index.html">Gp<span>.</span></a></h1>
-=======
-      <a href="./index.html" class="logo me-auto me-lg-0"><img src="./assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
-      <h1 class="logo me-auto me-lg-0"><a href="./index.html">CFG8</a></h1>
->>>>>>> Stashed changes
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -160,81 +155,8 @@
 
   </main><!-- End #main -->
 
-<<<<<<< Updated upstream
   <!-- ======= Footer ======= -->
  
-=======
-   <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-info">
-              <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
-              <p>
-                101 Second Road, London <br>
-                SW1A 1AA, UK<br><br>
-                <strong>Phone:</strong> +44 77 123 456 78<br>
-                <strong>Email:</strong> info@cfg.com<br>
-              </p>
-              <div class="social-links mt-3">
-                <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">The Team</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Sign up to our monthly newsletter below.</p>
-            <form action="" method="post">
-              <input type="email" name="email" placeholder="name@example.com"><input type="submit" value="Subscribe">
-            </form>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <!-- <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div> -->
-    <!-- </div> -->
->>>>>>> Stashed changes
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
