--- a/Bootstrap-template-Gp/index-team.html
+++ b/Bootstrap-template-Gp/index-team.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <!-- <title>Gp Bootstrap Template - Index</title>
+  <title>CFG8</title>
   <meta content="" name="description">
   <meta content="" name="keywords"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
