--- a/Bootstrap-template-Gp/index.html
+++ b/Bootstrap-template-Gp/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- JOJO M -->
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -10,7 +9,7 @@
   <meta content="" name="keywords"> -->
 
   <!-- Favicons -->
-  <link href="assets/img/favicon-globe2.png" rel="icon">
+  <link href="./assets/img/favicon-globe2.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="./https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -50,8 +49,8 @@
     <div class="container d-flex align-items-center justify-content-lg-between">
 
       <!-- Mercede updated header logos -->
-      <a href="https://codefirstgirls.com/" class="logo me-auto me-lg-0"><img src="assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
-      <h1 class="logo me-auto me-lg-0"><a href="#hero">CFG8</a></h1>
+      <a href="https://codefirstgirls.com/" class="logo me-auto me-lg-0"><img src="./assets/img/CFG-logo.png" alt="CFG logo" class="img-fluid"></a>
+      <h1 class="logo me-auto me-lg-0"><a href="./index.html">CFG8</a></h1>
 
       <!-- Mercede updated Navbar titles -->
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -100,32 +99,20 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-house"></i>
-            <h3><a href="#Home">Home</a></h3>
+            <h3><a href="./index.html">Home</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-file-person"></i>
             <!-- <i class="bi bi-fingerprint"></i> -->
-            <h3><a href="#About">About</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="bi bi-boxes"></i>
-            <h3><a href="#services">Services</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-paint-brush-line"></i>
-            <h3><a href="#portfolio">Portfolio</a></h3>
+            <h3><a href="./index-what-we-do.html">What We Do</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="bi bi-person"></i>
-            <h3><a href="#The Team">The Team</a></h3>
+            <h3><a href="./index-team.html">The Team</a></h3>
           </div>
         </div>
       </div>
