more links and js fixed - hopefully

--- a/Bootstrap-template-Gp/index-what-we-do.html
+++ b/Bootstrap-template-Gp/index-what-we-do.html
@@ -119,7 +119,7 @@
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
-        <h3>Some of our Clients</h3>
+        <h3>A small selection of our satisfied clients</h3>
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="./assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
