--- a/Bootstrap-template-Gp/index.html
+++ b/Bootstrap-template-Gp/index.html
@@ -12,7 +12,7 @@
   <link href="./assets/img/favicon-globe2.png" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="./https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
@@ -153,17 +153,17 @@
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
-        <h3>Some of our valued Clients</h3>
+        <h3>A small selection of our satisfied clients</h3>
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="./assets/img/clients/client-1.png" class="img-fluid" alt="logo"></div>
-            <div class="swiper-slide"><img src="./assets/img/clients/client-2.png" class="img-fluid" alt="logo"></div>
-            <div class="swiper-slide"><img src="./assets/img/clients/client-3.png" class="img-fluid" alt="logo"></div>
-            <div class="swiper-slide"><img src="./assets/img/clients/client-4.png" class="img-fluid" alt="logo"></div>
-            <div class="swiper-slide"><img src="./assets/img/clients/client-5.png" class="img-fluid" alt="logo"></div>
-            <div class="swiper-slide"><img src="./assets/img/clients/client-6.png" class="img-fluid" alt="logo"></div>
-            <div class="swiper-slide"><img src="./assets/img/clients/client-7.png" class="img-fluid" alt="logo"></div>
-            <div class="swiper-slide"><img src="./assets/img/clients/client-8.png" class="img-fluid" alt="logo"></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -658,7 +658,7 @@
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="./index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="./assets/vendor/purecounter/purecounter_vanilla.js"></script>
